# llvm-fir-pipeline

./: CMakeLists.txt  README.md
src/: dummy.cpp
tests/: TestBasic.cpp
